start screen hidden, question screen showing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="start">Start Quiz</button>
       </div>
 
-      <div id="questions" class="hide"> <!--Use event delegation-->
+      <div id="question-container" class="hide"> <!--Use event delegation-->
         <h2 id="question-title"></h2>
         <div id="choices" class="choices"></div>
       </div>
